bug: Horizontal scroll on mobile chrome PLP
STORE PAGE: Horizontal scroll on mobile view

--- a/src/components/Product/Product.module.scss
+++ b/src/components/Product/Product.module.scss
@@ -23,6 +23,14 @@
   }
 }
 
+.product-chrome {
+  overflow: scroll;
+
+  @include medium {
+    overflow: hidden;
+  }
+}
+
 .inCart {
   display: flex;
   align-items: center;
